c2prj1_cards/grade.txt
Grading at Mon Jun 22 17:27:53 UTC 2020
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:56:3: error: ‘else’ without a previous ‘if’
   else if(value_let=='A'||value_let=='K'||value_let=='Q'||value_let=='J')
   ^
Could not compile your card.c!

Overall Grade: FAILED
